--- a/atomic-scss/utilities/utility-variables.scss
+++ b/atomic-scss/utilities/utility-variables.scss
@@ -7,10 +7,16 @@
 // COLORS
 // --------------------------------------------------
 $fbto-midnight-blue: #002e6e;
+$charcoal: #333;
+$greyish: #6D7278;
 $seashell-grey: #f1f1f1;
 $barry-white: #fff;
 
-$main-font-color: $fbto-midnight-blue;
+$red: #8b1e3f;
+$yellow: #FAB90A;
+$green: #68B714;
+
+$main-font-color: $greyish;
 
 
 // MARGINS / PADDINGS IN VARIABLES!
