--- a/build-scss/style.scss
+++ b/build-scss/style.scss
@@ -25,6 +25,7 @@
 // ATOMS
 @import "../atomic-scss/atoms/atom-heading.scss";
 @import "../atomic-scss/atoms/atom-chargingspot.scss";
+@import "../atomic-scss/atoms/atom-section-intro.scss";
 
 
 // MOLECULES
