--- a/atomic-scss/utilities/utility-grid.scss
+++ b/atomic-scss/utilities/utility-grid.scss
@@ -170,3 +170,11 @@
 .last-lg {
     order: 1;
 }
+
+.center-xs,
+.center-sm,
+.center-md,
+.center-lg {
+    justify-content: center;
+    text-align: center;
+}
