Removed currently unused meta tags and updated design

--- a/components/pages/index.html
+++ b/components/pages/index.html
@@ -6,22 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<title>Actuele status Laadpalen P5 - Achmeatoren</title>
 
-	<meta name="description" content="">
+	<meta name="description" content="Bekijk de status van de Laadpalen op P5">
 	<meta property="og:image" content="http://example.com/image.jpg">
-	<meta property="og:site_name" content="Site Name">
-	<meta property="og:title" content="Page Title">
-	<meta property="og:description"content="Description of this web page">
-	<meta property="og:url" content="http://example.com/index.html"> 
-	<meta property="og:locale" content="en_GB">
-
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="@site_account">
-	<meta name="twitter:creator" content="@individual_account">
-	<meta name="twitter:url" content="https://example.com/page.html">
-	<meta name="twitter:title" content="Content Title">
-	<meta name="twitter:description" content="Content description less than 200 characters">
-	<meta name="twitter:image" content="https://example.com/image.jpg">
-
+	<meta property="og:site_name" content="Laadpalen P5">
+	<meta property="og:title" content="Laadpalen P5">
+	<meta property="og:description"content="ekijk de status van de Laadpalen op P5">
+	<meta property="og:url" content="http://kanikladen.nl/index.html"> 
+	<meta property="og:locale" content="nl_NL">
     <!-- FAVICONS -->
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
