--- a/components/pages/index.html
+++ b/components/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge; chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<title>Actuele status Laadpalen P5 - Achmeatoren</title>
+	<title>Actuele status Laadpalen Gebouw 5 - Achmeatoren</title>
 
 	<meta name="description" content="Bekijk de status van de Laadpalen op P5">
 	<meta property="og:image" content="http://example.com/image.jpg">
@@ -36,7 +36,7 @@
             <div class="col-xs-12 center-xs">
                 <div class="section-intro">
                     <h1>Kan ik opladen?</h1>
-                    <p>Hieronder is de actuele bezetting van de laadpunten op P5 te zien. <br> De gegevens worden elke 60 seconden ververst.</p>
+                    <p>Hieronder is de actuele bezetting van de laadpunten onder gebouw 5 te zien. <br> De gegevens worden elke 60 seconden ververst.</p>
                 </div>
             </div>
         </div>
