--- a/atomic-scss/utilities/utility-variables.scss
+++ b/atomic-scss/utilities/utility-variables.scss
@@ -12,9 +12,9 @@ $greyish: #6D7278;
 $seashell-grey: #f1f1f1;
 $barry-white: #fff;
 
-$red: #8b1e3f;
-$yellow: #FAB90A;
-$green: #68B714;
+$claret-red: #8b1e3f;
+$sun-yellow: #FAB90A;
+$lima-green: #68B714;
 
 $main-font-color: $greyish;
 
