--- a/build-scss/style.scss
+++ b/build-scss/style.scss
@@ -26,6 +26,7 @@
 @import "../atomic-scss/atoms/atom-heading.scss";
 @import "../atomic-scss/atoms/atom-chargingspot.scss";
 @import "../atomic-scss/atoms/atom-section-intro.scss";
+@import "../atomic-scss/atoms/atom-history-table.scss";
 
 
 // MOLECULES
