--- a/atomic-scss/atoms/atom-history-table.scss
+++ b/atomic-scss/atoms/atom-history-table.scss
@@ -31,6 +31,10 @@
     flex: 1;
     align-items: center;
 
+    &:nth-child(2) {
+        flex: 2;
+    }
+
     &:last-child {
         justify-content: flex-end;
     }
